deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: sumannn/nodeapp-cicd:replaceImageTag
        volumeMounts:
          - name: sec
            mountPath: /opt  
        ports:
         - containerPort: 3000
      volumes:
        - name: sec
          secret:
            secretName: my-secrets
               
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: node
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
