ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  rules:
  - host: "thesuman.xyz"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-service
            port:
              number: 80
